--- a/_gulp/_jade/ua-order-details.jade
+++ b/_gulp/_jade/ua-order-details.jade
@@ -126,89 +126,92 @@ html(lang="ru")
                 h1 Заказ&nbsp;
                   strong №56465453
                   
-              table.table-basic.table-basic--data.table-basic--history
+              table.table-basic.table-basic--data
                 thead
                   tr
                     th.hidden-xs Производитель
                     th Артикул
+                    th Статус
                     th.hidden-xxs Название детали
                     th.hidden-xs Срок
-                    th.visible-xs.text-center.noPW инфо
                     th.noPW.text-center Кол-во
                     th Цена
-                    th Cумма
-                    th.th-btn &nbsp;
+                    th.hidden-xs Cумма
+                    th.text-center.noPW инфо
                 tbody
                   tr.tr--separator
                     td &nbsp;
                   tr
                     td.hidden-xs VW / AUDI
                     td 044121058A
-                    td.hidden-xxs SCHLAUCH
+                      .visible-xs
+                        a(href="#") SCHLAUCH
+                    td
+                      .info-status.info-status--inwork В работе
+                    td.hidden-xxs
+                      a(href="#") SCHLAUCH
                     td.hidden-xs 1
-                    td.noPW.text-center.visible-xs
+                    td.noPW.text-center 1
+                    td.nowrap € 5,89
+                    td.hidden-xs.nowrap € 58,9
+                    td.noPW.text-center
                       a(href="#popup-about").icon.icon--info.open-popup-link
                         i.ion-ios-information
-                    td.noPW.text-center
-                      input(type="text" name="text" value="10").price-input
-                    td € 5,89
-                    td € 58,9
-                    td
-                      .history-search__btn
-                        button(type="submit").btn.btn--cart
-                          i.ion-close
                   tr
                     td.hidden-xs TOYOTA
                     td 044121058A
-                    td.hidden-xxs SCHLAUCH
+                      .visible-xs
+                        a(href="#") SCHLAUCH
+                    td
+                      .info-status.info-status--cancel Отменен
+                    td.hidden-xxs 
+                      a(href="#") SCHLAUCH
                     td.hidden-xs 2
-                    td.noPW.text-center.visible-xs
+                    td.noPW.text-center 2
+                    td.nowrap € 4,89
+                    td.hidden-xs.nowrap € 489
+                    td.noPW.text-center
                       a(href="#popup-about").icon.icon--info.open-popup-link
                         i.ion-ios-information
-                    td.noPW.text-center
-                      input(type="text" name="text" value="100").price-input
-                    td € 4,89
-                    td € 489
-                    td
-                      .history-search__btn
-                        button(type="submit").btn.btn--cart
-                          i.ion-close
                   tr
                     td.hidden-xs OPEL
                     td 044121058A
-                    td.hidden-xxs SCHLAUCH
+                      .visible-xs
+                        a(href="#") SCHLAUCH
+                    td
+                      .info-status.info-status--custom Под заказ
+                    td.hidden-xxs 
+                      a(href="#") SCHLAUCH
                     td.hidden-xs 3
-                    td.noPW.text-center.visible-xs
+                    td.noPW.text-center 3
+                    td.nowrap € 3,89
+                    td.hidden-xs.nowrap € 3890
+                    td.noPW.text-center
                       a(href="#popup-about").icon.icon--info.open-popup-link
                         i.ion-ios-information
-                    td.noPW.text-center
-                      input(type="text" name="text" value="1000").price-input
-                    td € 3,89
-                    td € 3890
+                  tr
+                    td.hidden-xs OPEL
+                    td 044121058A
+                      .visible-xs
+                        a(href="#") SCHLAUCH
                     td
-                      .history-search__btn
-                        button(type="submit").btn.btn--cart
-                          i.ion-close
+                      .info-status.info-status--issued Выдан
+                    td.hidden-xxs 
+                      a(href="#") SCHLAUCH
+                    td.hidden-xs 3
+                    td.noPW.text-center 3
+                    td.nowrap € 3,89
+                    td.hidden-xs.nowrap € 3890
+                    td.noPW.text-center
+                      a(href="#popup-about").icon.icon--info.open-popup-link
+                        i.ion-ios-information
                   tr.tr--separator
                     td(colspan="6") &nbsp;
                     td &nbsp;
                     td &nbsp;
-              
-              table.table-basic.table-basic--total
-                tbody
-                  tr
                     td &nbsp;
-                      a(href="#").btn.btn--red.btn--border.btn--xxs-block.visible-xxs Очистить корзину
-                    td 
-                      span.total Итого: 
-                        strong 1110 шт. € 4500
-                  tr
-                    td.hidden-xxs 
-                      a(href="#").btn.btn--red.btn--border.btn--xxs-block Очистить корзину
-                    td
-                      button(type="submit").btn.btn--blue.btn--xxs-block Оформить заказ
-
-              table.table-basic.table-basic--data
+                    
+              //- table.table-basic.table-basic--data
                 thead
                   tr
                     th № заказа
