--- a/_gulp/_jade/ua-shop-cart.jade
+++ b/_gulp/_jade/ua-shop-cart.jade
@@ -135,7 +135,7 @@ html(lang="ru")
                       th Артикул
                       th.hidden-xxs Название детали
                       th.hidden-xs Срок
-                      th.visible-xs.text-center.noPW инфо
+                      th.text-center.noPW инфо
                       th.noPW.text-center Кол-во
                       th Цена
                       th Cумма
@@ -146,9 +146,10 @@ html(lang="ru")
                     tr
                       td.hidden-xs VW / AUDI
                       td 044121058A
-                      td.hidden-xxs SCHLAUCH
+                      td.hidden-xxs 
+                        a(href="#") SCHLAUCH
                       td.hidden-xs 1
-                      td.noPW.text-center.visible-xs
+                      td.noPW.text-center
                         a(href="#popup-about").icon.icon--info.open-popup-link
                           i.ion-ios-information
                       td.noPW.text-center
@@ -162,9 +163,10 @@ html(lang="ru")
                     tr
                       td.hidden-xs TOYOTA
                       td 044121058A
-                      td.hidden-xxs SCHLAUCH
+                      td.hidden-xxs 
+                        a(href="#") SCHLAUCH
                       td.hidden-xs 2
-                      td.noPW.text-center.visible-xs
+                      td.noPW.text-center
                         a(href="#popup-about").icon.icon--info.open-popup-link
                           i.ion-ios-information
                       td.noPW.text-center
@@ -178,9 +180,10 @@ html(lang="ru")
                     tr
                       td.hidden-xs OPEL
                       td 044121058A
-                      td.hidden-xxs SCHLAUCH
+                      td.hidden-xxs 
+                        a(href="#") SCHLAUCH
                       td.hidden-xs 3
-                      td.noPW.text-center.visible-xs
+                      td.noPW.text-center
                         a(href="#popup-about").icon.icon--info.open-popup-link
                           i.ion-ios-information
                       td.noPW.text-center
@@ -193,6 +196,7 @@ html(lang="ru")
                             i.ion-close
                     tr.tr--separator
                       td(colspan="6") &nbsp;
+                      td &nbsp;
                       td &nbsp;
                       td &nbsp;
                 
