--- a/_gulp/_jade/ua-payment-details.jade
+++ b/_gulp/_jade/ua-payment-details.jade
@@ -124,7 +124,7 @@ html(lang="ru")
                     th.hidden-xxs Тип
                     th Дата
                     th Сумма
-                    th.hidden-xxs Заказ-основание
+                    th.hidden-xxs Плательщик
                     th.th-btn &nbsp;
                 tbody
                   tr.tr--separator
@@ -144,9 +144,6 @@ html(lang="ru")
                           a(href="#").info-link
                             i.ion-cloud
                             | Скачать
-                          a(href="#").info-link
-                            i.ion-close
-                            | Удалить
                         button(type="submit").btn.btn--edit.btn--edit-popup
                           i.ion-gear-a
                   tr.visible-xxs
@@ -172,9 +169,6 @@ html(lang="ru")
                           a(href="#").info-link
                             i.ion-cloud
                             | Скачать
-                          a(href="#").info-link
-                            i.ion-close
-                            | Удалить
                         button(type="submit").btn.btn--edit.btn--edit-popup
                           i.ion-gear-a
                   tr.visible-xxs
