--- a/_gulp/_jade/ua-shop-cart.jade
+++ b/_gulp/_jade/ua-shop-cart.jade
@@ -203,7 +203,9 @@ html(lang="ru")
                 table.table-basic.table-basic--total
                   tbody
                     tr
-                      td &nbsp;
+                      td
+                        a(href="#").btn.btn--blue.btn--xxs-block выгрузить в exel
+                        
                         a(href="#").btn.btn--red.btn--border.btn--xxs-block.visible-xxs Очистить корзину
                       td 
                         span.total Итого: 
@@ -338,8 +340,6 @@ html(lang="ru")
                     .clear30
                     button(type="submit").btn.btn--blue.btn--biggest подтвердить
                     
-                    .text-center
-                      a(href="#").btn.btn--blue.btn--xxs-block выгрузить позиции в exel
 
       include ./_include/_footer
       //- div(style="height: 900px; background-color: #000")
