--- a/_gulp/_sass/3-modules/_modules.sass
+++ b/_gulp/_sass/3-modules/_modules.sass
@@ -22,6 +22,8 @@
       // margin-left: -10px
       overflow: hidden
       height: 60px
+      transform: translateY(0)
+      transition: all 0.2s linear
 
     &:hover
       .news__line1 i
@@ -36,11 +38,11 @@
         i
           width: 100%
           height: 100%
-      .news__wrapper
+      p, .news__readmore
         transform: translateY(-19px)
       .news__readmore
         opacity: 1
-      .news__img, .news__date
+      .news__date
         opacity: 0
 
   &__link
@@ -81,7 +83,8 @@
     margin-left: 10px
     position: absolute
     opacity: 0
-    transition: opacity 0.2s linear
+    transform: translateY(0)
+    transition: transform 0.2s linear
     &::before
       content: ''
       width: 23px
@@ -157,8 +160,8 @@
 
   &__wrapper
     position: relative
-    transform: translateY(0)
-    transition: transform 0.2s linear
+    // transform: translateY(0)
+    // transition: transform 0.2s linear
 
 
 /* tag */
@@ -784,11 +787,6 @@
       line-height: 1
 
 /**/
-
-
-
-
-
 .hay
   &__block
     position: relative
@@ -900,9 +898,9 @@
     font-family: $font-intro
     color: $primary-color
     display: block
-    line-height: 1.2
+    line-height: 1.5
     left: 24px
-    bottom: 10px
+    bottom: 0px
     position: absolute
     transition: color .4s ease-out 0s
     user-select: none
