--- a/_gulp/_jade/register.jade
+++ b/_gulp/_jade/register.jade
@@ -198,6 +198,57 @@ html(lang="ru")
                         input(type="text" placeholder="Сколько лет на рынке").form-control
                         
                     .form__block
+                      label.form__block__label В каком формате работает ваша компания (пример через checkbox): 
+                    
+                      .form__group
+                        label.form__check
+                          span.span
+                            input(type="checkbox" name="checkbox11" checked)
+                            span.input-check
+                          span.span
+                            span.input-label интернет-магазин (оптовая торговля) 
+                            
+                      .form__group
+                        label.form__check
+                          span.span
+                            input(type="checkbox" name="checkbox12")
+                            span.input-check
+                          span.span
+                            span.input-label интернет магазин (розничная торговля) 
+                            
+                      .form__group
+                        label.form__check
+                          span.span
+                            input(type="checkbox" name="checkbox13")
+                            span.input-check
+                          span.span
+                            span.input-label интернет-магазин (опт и розница) 
+                            
+                      .form__group
+                        label.form__check
+                          span.span
+                            input(type="checkbox" name="checkbo14")
+                            span.input-check
+                          span.span
+                            span.input-label оптовый склад
+                            
+                      .form__group
+                        label.form__check
+                          span.span
+                            input(type="checkbox" name="checkbox15" checked)
+                            span.input-check
+                          span.span
+                            span.input-label СТО
+                            
+                      .form__group
+                        label.form__check
+                          span.span
+                            input(type="checkbox" name="checkbox16")
+                            span.input-check
+                          span.span
+                            span.input-label сеть магазинов розничной торговли (или мелкий опт)
+                            
+                    .form__block
                       label.form__block__label В каком формате работает ваша компания: 
                     
                       .form__group
@@ -255,7 +306,6 @@ html(lang="ru")
                             span.input-radio
                           span.span
                             span.input-label другое (указать)
-                        
                     
                     .form__block
                       .form__group.form__group--slim
