--- a/_gulp/_jade/_include/_footer-js.jade
+++ b/_gulp/_jade/_include/_footer-js.jade
@@ -2,6 +2,7 @@
 
 script(src='./js/libs/magnific-popup/jquery.magnific-popup.min.js')
 script(src='./js/libs/bootstrap/bootstrap.min.js')
+script(src='./js/libs/bootstrap/tab.js')
 script(src='./js/libs/sumoselect/jquery.sumoselect.min.js')
 script(src='./js/libs/nanoscroller/jquery.nanoscroller.min.js')
 script(src="https://cdnjs.cloudflare.com/ajax/libs/slideout/1.0.1/slideout.min.js")
