--- a/_gulp/_jade/_include/_head.jade
+++ b/_gulp/_jade/_include/_head.jade
@@ -39,3 +39,4 @@ head
   link(rel="stylesheet", href="./js/libs/air-datepicker/dist/css/datepicker.min.css")
   
   link(rel='stylesheet', href='./css/main.css')
+  link(rel='stylesheet', href='./css/add.css')
